[gd_scene load_steps=17 format=2]

[ext_resource path="res://Tower/house.png" type="Texture" id=1]
[ext_resource path="res://UI/HP_Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tower/House.gd" type="Script" id=3]
[ext_resource path="res://Tower/burning_end_2.png" type="Texture" id=4]
[ext_resource path="res://Tower/burning_start_1.png" type="Texture" id=5]
[ext_resource path="res://Tower/burning_loop_1.png" type="Texture" id=6]
[ext_resource path="res://Tower/burning_start_2.png" type="Texture" id=7]
[ext_resource path="res://Tower/burning_loop_2.png" type="Texture" id=8]
[ext_resource path="res://Tower/burning_end_1.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.1722, 21.3221 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 82.0608, 5.70607 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.61856, 23.1078 )

[sub_resource type="Animation" id=4]
resource_name = "aman"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("house:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/loop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/end:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/start:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "bakar"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("house:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/start:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/end:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "siram"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("house:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/loop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/end:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/start:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "terbakar"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("house:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/loop/burning_loop_1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop/burning_loop_3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/loop/burning_loop_2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("fire/loop/burning_loop_4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("fire/loop/burning_loop_5:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("fire/loop:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("fire/start:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("fire/end:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="House" type="KinematicBody2D" groups=[
"house",
]]
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 46
script = ExtResource( 3 )

[node name="house" type="Sprite" parent="."]
position = Vector2( -0.546036, -59.4391 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="fire" type="Node2D" parent="."]

[node name="end" type="Node2D" parent="fire"]
visible = false

[node name="burning_end_1" type="Sprite" parent="fire/end"]
position = Vector2( -44.5338, -5.39449 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="burning_end_3" type="Sprite" parent="fire/end"]
position = Vector2( 32.3682, -5.79089 )
scale = Vector2( 2.838, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="burning_end_2" type="Sprite" parent="fire/end"]
position = Vector2( 24.1881, -103.616 )
scale = Vector2( 1.29951, 1.35126 )
texture = ExtResource( 4 )
hframes = 5

[node name="burning_end_4" type="Sprite" parent="fire/end"]
position = Vector2( -35.813, -80.7109 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="burning_end_5" type="Sprite" parent="fire/end"]
position = Vector2( -2.51516, -15.3045 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="loop" type="Node2D" parent="fire"]

[node name="burning_loop_1" type="Sprite" parent="fire/loop"]
position = Vector2( -32.9639, -5.65421 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 6 )
hframes = 8
frame = 5

[node name="burning_loop_3" type="Sprite" parent="fire/loop"]
position = Vector2( 29.134, -6.05062 )
scale = Vector2( 2.838, 1.79835 )
texture = ExtResource( 6 )
hframes = 8
frame = 5

[node name="burning_loop_2" type="Sprite" parent="fire/loop"]
position = Vector2( 23.6983, -103.811 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 8 )
hframes = 8
frame = 5

[node name="burning_loop_4" type="Sprite" parent="fire/loop"]
position = Vector2( -49.6846, -84.3085 )
rotation = -0.727176
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 6 )
hframes = 8
frame = 5

[node name="burning_loop_5" type="Sprite" parent="fire/loop"]
position = Vector2( -2.28459, -15.5643 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 6 )
hframes = 8
frame = 5

[node name="start" type="Node2D" parent="fire"]
visible = false

[node name="burning_start_1" type="Sprite" parent="fire/start"]
position = Vector2( -45.919, -5.70487 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="burning_start_3" type="Sprite" parent="fire/start"]
position = Vector2( 30.9831, -6.10127 )
scale = Vector2( 2.838, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="burning_start_2" type="Sprite" parent="fire/start"]
position = Vector2( 23.9413, -103.321 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 7 )
hframes = 4
frame = 1

[node name="burning_start_4" type="Sprite" parent="fire/start"]
position = Vector2( -37.1981, -81.0213 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="burning_start_5" type="Sprite" parent="fire/start"]
position = Vector2( -3.9003, -15.6149 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"house",
]]
position = Vector2( 0, 3.53155 )
shape = SubResource( 1 )

[node name="H_area" type="Area2D" parent="."]
position = Vector2( 0, 14.6954 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="H_area"]
shape = SubResource( 2 )

[node name="V_area" type="Area2D" parent="."]
position = Vector2( 0, 12.314 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="V_area"]
position = Vector2( 0, 25.4712 )
shape = SubResource( 3 )

[node name="HP_Bar" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -57.1495
margin_top = -56.9131
margin_right = 216.85
margin_bottom = -16.9131
rect_scale = Vector2( 0.417906, 0.417906 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aman = SubResource( 4 )
anims/bakar = SubResource( 5 )
anims/siram = SubResource( 6 )
anims/terbakar = SubResource( 7 )

[connection signal="house_hit" from="." to="." method="_on_house_hit"]
